Closed Bug 66134 Opened 25 years ago Closed 23 years ago

nsDerivedSafe doesn't work on gcc 2.96 and gcc trunk

Categories

(Core :: XPCOM, defect, P1)

x86
Linux
defect

Tracking

()

RESOLVED FIXED
mozilla1.4alpha

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Whiteboard: [patch])

Attachments

(1 file)

nsDerivedSafe doesn't do what it's supposed to on gcc 2.96. HAVE_CPP_ACCESS_CHANGING_USING is defined, so it uses the code: private: using T::AddRef; using T::Release; Probably the test for HAVE_CPP_ACCESS_CHANGING_USING should be changed (since the code in nsCOMPtr.h is the only code that uses the result of that test). This has given me a good bit of grief twice, and at some point I'll probably turn the tree red because of it...
your probably already aware of this but, gcc 2.96 is broken, go to http://gcc.gnu.org/gcc-2.96.html , for more info.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9
let's see if this works with gcc 3.0 (after getting the app to compile there) and then decide if we need to fix this for 2.96 or not, given the non-release nature of 2.96. Targeting mozilla0.9.
the new rule is that 2.96 is a known bad compiler which we don't support. Marking this WONTFIX. Sorry. Please downgrade your compiler to 2.95.2 or see if you can help make us compile under gcc 3.0. Apologies for an unsatisfactory answer.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → WONTFIX
This bug is also present on the gcc trunk as of 2-3 weeks ago.
Summary: nsDerivedSafe doesn't work on gcc 2.96 → nsDerivedSafe doesn't work on gcc 2.96 and gcc trunk
ugh, re-opening. If it's a problem in the latest, then it really is a problem that needs to be addressed.
Status: RESOLVED → REOPENED
Resolution: WONTFIX → ---
Target Milestone: mozilla0.9 → mozilla1.1
Taking bug.
Assignee: scc → dbaron
Status: REOPENED → NEW
Priority: -- → P1
Whiteboard: [patch]
Target Milestone: mozilla1.1alpha → mozilla1.4alpha
Comment on attachment 117411 [details] [diff] [review] patch Requesting reviews from seawood and bryner (configure.in patch), but scc is also welcome to review.
Attachment #117411 - Flags: superreview?(bryner)
Attachment #117411 - Flags: review?(seawood)
Comment on attachment 117411 [details] [diff] [review] patch sr=bryner
Attachment #117411 - Flags: superreview?(bryner) → superreview+
Attachment #117411 - Flags: review?(seawood) → review+
Fix checked in to trunk, 2003-03-17 19:45 PST.
Status: NEW → RESOLVED
Closed: 25 years ago23 years ago
Resolution: --- → FIXED
Oh, and the btek tinderbox log confirms that the test does still pass on egcs, as it should: checking whether the compiler can resolve const ambiguities for templates... (cached) yes checking whether the C++ "using" keyword can change access... yes checking whether the C++ "using" keyword resolves ambiguity... (cached) no
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: