Change AIX_XLC_364 ifdef back to AIX due to linker errors on current AIX tinderbox.  b=66134